# z2p

./: Cargo.toml  config.yaml
migrations/: 20201213201920_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health.rs  subscribe.rs
tests/: health.rs
