[package]
name = "z2p"
version = "0.1.0"
authors = ["Brandon Raabe <brandocorp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-web = "3.1.0"
actix-rt = "1.1.1"
env_logger = "0.7"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.4.1", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
config = "0.10.1"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"

[dev-dependencies]
reqwest = "0.10.9"
tokio = "0.2.22"
